fix: add height to message div to avoid layour shift

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ ul {
   padding-top: 0.625rem;
   text-align: center;
   color: #663399;
+  height: 1.6rem;
 }
 
 .about-link {
